<resources>
    <string name="app_name">Coachmark - Sample App</string>

    <string name="basic_orientation" >Basic Orientation ( dismiss on touch enabled )</string>

    <string name="north" >North</string>
    <string name="northeast" >North East</string>
    <string name="east" >East</string>
    <string name="southeast" >South East</string>
    <string name="south" >South</string>
    <string name="southwest" >South West</string>
    <string name="west" >West</string>
    <string name="northwest" >North West</string>

    <string name="reset_coachmarks" >Reset Coachmarks</string>
    <string name="microadjust" >microAdjustX and microAdjustY used to refine position</string>
    <string name="microadjust_button" >Cool New Feature</string>
    <string name="microadjust_coachmark" >Check it out</string>

    <string name="multiline_example" >You can use \\n to create multiline coachmarks. Tap the coachmark to see a callback invoked when the message is touched.</string>
    <string name="multiline_button" >Best button ever!</string>
    <string name="multipline_coachmark" >\nThis is a lazy,\ngood for nothing Button.\nIt does nothing and\njust hangs out all day!!!\n</string>
    <string name="display_options">Display Options</string>

    <string name="display_options_desc" >Use CoachmarkDisplayHandler to display a coachmark under a variety of conditions and/or for a limited amount of time ( flip tabs back and forth to see the difference in behavior ).</string>
    <string name="here_today" >Here Today...gone...</string>
    <string name="display_ten_seconds" >Display for 5 seconds</string>
    <string name="display_once_for_ten_seconds" >Display Once for 5 Seconds (click to reset)</string>
    <string name="display_on_version_change" >Display When Version Changes</string>

    <string name="callback_example" >Hey, Hey , Hey I am a callback, you touched the multiline message.</string>

</resources>
