<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/basic_label"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:textStyle="bold"
        android:textSize="10pt"
        android:text="@string/display_options_desc" />

    <Button
        android:layout_below="@id/basic_label"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:id="@+id/five_seconds"
        android:textSize="8pt"
        android:textColor="#333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_ten_seconds" />

    <Button
        android:layout_below="@id/five_seconds"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="100dp"
        android:id="@+id/display_once"
        android:textSize="8pt"
        android:textColor="#333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_once_for_ten_seconds" />


</RelativeLayout>